...
		static let leftBarButtonDescription = "AppStrings.Home.leftBarButtonDescription"
		static let rightBarButtonDescription = "AppStrings.Home.rightBarButtonDescription"
		static let activateCardOnTitle = "AppStrings.Home.activateCardOnTitle"
		static let activateCardOffTitle = "AppStrings.Home.activateCardOffTitle"
		static let activateCardBluetoothOffTitle = "AppStrings.Home.activateCardBluetoothOffTitle"
		static let riskCardIntervalUpdateTitle = "AppStrings.Home.riskCardIntervalUpdateTitle"
		static let tableView = "AppStrings.Home.tableView"

		enum AppClosureNoticeCell {
			static let container = "AppStrings.Home.AppClosureNoticeCell.container"
			
			enum Details {
				static let image = "AppStrings.Home.AppClosureNoticeCell.Details.image"
...
		}

	}
	
	enum ContactDiary {
		static let segmentedControl = "AppStrings.ContactDiary.Day"
		static let dayTableView = "AppStrings.ContactDiary.Day.TableView"
	}
	
	enum ContactDiaryInformation {
		static let imageDescription = "AppStrings.ContactDiaryInformation.imageDescription"
		static let descriptionTitle = "AppStrings.ContactDiaryInformation.descriptionTitle"
		static let descriptionSubHeadline = "AppStrings.ContactDiaryInformation.descriptionSubHeadline"
		static let dataPrivacyTitle = "AppStrings.ContactDiaryInformation.dataPrivacyTitle"
		static let legal_1 = "AppStrings.ContactDiaryInformation.legalHeadline_1"
		
		enum Day {
			static let cellView = "AppStrings.ContactDiaryInformation.cellView-%d"
			static let headerStackView = "AppStrings.ContactDiaryInformation.headerStackView-%d"
			static let checkboxImageView = "AppStrings.ContactDiaryInformation.checkboxImageView-%d"
			static let label = "AppStrings.ContactDiaryInformation.label-%d"
			static let durationSegmentedContol = "AppStrings.ContactDiaryInformation.durationSegmentedContol"
			static let maskSituationSegmentedControl = "AppStrings.ContactDiaryInformation.maskSituationSegmentedControl"
			static let settingSegmentedControl = "AppStrings.ContactDiaryInformation.settingSegmentedControl"
			static let durationLabel = "AppStrings.ContactDiaryInformation.durationLabel"
			static let notesTextField = "AppStrings.ContactDiaryInformation.notesTextField"
			static let notesInfoButton = "AppStrings.ContactDiaryInformation.notesInfoButton"
		}
		
		enum EditEntries {
			static let tableView = "AppStrings.ContactDiary.EditEntries.tableView"
			static let nameTextField = "AppStrings.ContactDiary.EditEntries.nameTextField"
			static let phoneNumberTextField = "AppStrings.ContactDiary.EditEntries.phoneNumberTextField"
			static let eMailTextField = "AppStrings.ContactDiary.EditEntries.eMailTextField"
		}
		
		enum Overview {
			static let riskLevelLow = "AppStrings.ContactDiary.Overview.lowRiskTitle"
			static let riskLevelHigh = "AppStrings.ContactDiary.Overview.increasedRiskTitle"
			static let tableView = "AppStrings.ContactDiary.Overview.tableView"
			static let emptyState = "AppStrings.ContactDiary.Overview.emptyState"

			static let checkinRiskLevelLow = "AppStrings.ContactDiary.Overview.CheckinEncounter.titleLowRisk"
			static let checkinRiskLevelHigh = "AppStrings.ContactDiary.Overview.CheckinEncounter.titleHighRisk"
			static let checkinTableView = "AppStrings.ContactDiary.Overview.CheckinEncounter.tableView"
			static let cell = "ContactDiary_Overview_cell-%d"
			static let cellDateHeader = "ContactDiary_Overview_cellDateHeader-%d"
			static let person = "ContactDiary_Overview_personEntry-%d"
			static let location = "ContactDiary_Overview_locationEntry-%d"
			static let submissionTitle = "AppStrings.ContactDiary.Overview.submissionTitle"
...
		static let imprintSection1Text = "AppStrings.AppInformation.imprintSection1Text"
		static let imprintSection2Text = "AppStrings.AppInformation.imprintSection2Text"
		static let imprintSection3Title = "AppStrings.AppInformation.imprintSection3Title"
		static let imprintSection3Text = "AppStrings.AppInformation.imprintSection3Text"
		static let imprintSection4Title = "AppStrings.AppInformation.imprintSection4Title"
		static let imprintSection4Text = "AppStrings.AppInformation.imprintSection4Text"
		static let privacyImageDescription = "AppStrings.AppInformation.privacyImageDescription"
		static let privacyTitle = "AppStrings.AppInformation.privacyTitle"
		static let termsImageDescription = "AppStrings.AppInformation.termsImageDescription"
		static let termsTitle = "AppStrings.AppInformation.termsTitle"
		static let imprintSection2Title = "AppStrings.AppInformation.imprintSection2Title"
		static let legalImageDescription = "AppStrings.AppInformation.legalImageDescription"
	}
...
		static let answerOptionCountry = "AppStrings.ExposureSubmissionWarnEuropeTravelConfirmation.answerOptionCountry"
		static let answerOptionOtherCountries = "AppStrings.ExposureSubmissionWarnEuropeTravelConfirmation.answerOptionOtherCountries"
		static let answerOptionNone = "AppStrings.ExposureSubmissionWarnEuropeTravelConfirmation.answerOptionNone"
	}
	
	enum ExposureSubmission {
		static let primaryButton = "AppStrings.ExposureSubmission.primaryButton"
		static let secondaryButton = "AppStrings.ExposureSubmission.secondaryButton"

		enum OverwriteNotice {
			static let imageDescription = "AppStrings.ExposureSubmission.OverwriteNotice.imageDescription"

			enum Pcr {
...
