...
*/

// General
"Today" = "Today";
"Yesterday" = "Yesterday";
"Hour" = "Hour";
"Hours" = "Hours";

// Scene-specific
"ExposureDetection_lastContactTitle" = "Contact Determined";
"ExposureDetection_lastContactText" = "$ days ago";
"ExposureDetection_lastSync" = "Last synchronization: $";
"ExposureDetection_synchronize" = "Synchronize";
...
